# aero-mapping

./: .dockerignore  .env.example  .gitignore  .neon  Dockerfile  Makefile  README.md  docker-compose.yml  industrial_filters.yaml  main.py  map.html  pyproject.toml  suppliers.csv
docs/development/: setup-steps.md  toInvestigate.md  tracking_progress.md
scripts/: check_providers_async.py  create_tables.sh  health_check.sh  test-full-pipeline.sh
src/: pipeline.py  pipeline.py.backup
src/core/: config.py
src/discovery/: discovery.py  discovery_filter.py  discovery_filter_and_deduplication.py  discovery_filter_and_deduplication_async.py  discovery_filter_and_deduplication_async_caching.py  discovery_filter_and_deduplication_async_caching_log.py  discovery_filter_and_deduplication_async_caching_log_sortAndDedupFirst.py  discovery_filter_and_deduplication_async_caching_transparent.py
src/geocode/: __init__.py  advanced_supplier_comparator.py  compare_geocoders.py  geocode.py  google_geocoder.py  here_geocoder.py  improved_comparison.py  initial_comparison.py  locationiq_geocoder.py  mapbox_geocoder.py  nominatim_geocoder.py  opencage_geocoder.py  providers.py  six_geocoder.py  supplier_discovery_comparator.py  three_geocoder.py
src/visualize/: maplibre_visualize.py  visualize.py
tests/: conftest.py  test_geocoders.sh  test_six_geocoders.py  test_six_geocoders.sh  test_six_geocoders_fast.py
